Adding jvmArgs to make run-war work again
With weceem and default arguments it run out of memory.